# V4_predict

./: .env.example  .gitignore  .npmrc  ARCHITECTURE.md  README.md  eslint.config.js  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  pages.yml
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/web/src/: main.tsx  test-setup.ts
apps/web/src/app/: App.test.tsx  App.tsx  Footer.tsx  providers.tsx
apps/web/src/components/: BacktestTab.tsx  ChartPane.tsx  MTFBiasPanel.tsx  MetaBrainCard.tsx  MistakeLedgerView.tsx  NewsPanel.tsx  Panels.test.tsx  ScannerTab.tsx  Topbar.test.tsx  Topbar.tsx  TradeSetupPanel.tsx
apps/web/src/hooks/: useBus.ts  useEngine.ts  useFeed.ts  useTAEngine.ts
apps/web/src/store/: appStore.test.ts  appStore.ts  candleCache.ts
apps/web/src/styles/: index.css  theme.css
services/api/: pyproject.toml
services/api/app/: __init__.py  main.py
src/: main.py
